Fixed overlapping header text

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -29,6 +29,7 @@
 
 .heading-container {
   justify-content: center;
+  min-width: 12em;
 }
 
 .nav-heading {
